--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -204,3 +204,28 @@ target_compile_definitions( FreeImageLib
 target_include_directories( FreeImageLib
 	PUBLIC ./
 )
+
+# Enforece standards
+set_property(TARGET FreeImage PROPERTY CXX_STANDARD 14)
+set_property(TARGET FreeImageLib PROPERTY CXX_STANDARD 14)
+set_property(TARGET LibJPEG PROPERTY CXX_STANDARD 14)
+set_property(TARGET LibJXR PROPERTY CXX_STANDARD 14)
+set_property(TARGET LibOpenJPEG PROPERTY CXX_STANDARD 14)
+set_property(TARGET LibPNG PROPERTY CXX_STANDARD 14)
+set_property(TARGET LibRaw PROPERTY CXX_STANDARD 14)
+set_property(TARGET LibTIFF4 PROPERTY CXX_STANDARD 14)
+set_property(TARGET LibWebP PROPERTY CXX_STANDARD 14)
+set_property(TARGET OpenEXR PROPERTY CXX_STANDARD 14)
+set_property(TARGET ZLib PROPERTY CXX_STANDARD 14)
+
+set_property(TARGET FreeImage PROPERTY C_STANDARD 11)
+set_property(TARGET FreeImageLib PROPERTY C_STANDARD 11)
+set_property(TARGET LibJPEG PROPERTY C_STANDARD 11)
+set_property(TARGET LibJXR PROPERTY C_STANDARD 11)
+set_property(TARGET LibOpenJPEG PROPERTY C_STANDARD 11)
+set_property(TARGET LibPNG PROPERTY C_STANDARD 11)
+set_property(TARGET LibRaw PROPERTY C_STANDARD 11)
+set_property(TARGET LibTIFF4 PROPERTY C_STANDARD 11)
+set_property(TARGET LibWebP PROPERTY C_STANDARD 11)
+set_property(TARGET OpenEXR PROPERTY C_STANDARD 11)
+set_property(TARGET ZLib PROPERTY C_STANDARD 11)
