--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,4 +1,4 @@
-name: CMake Build and Test
+name: CMake Build
 
 on:
   push:
@@ -18,11 +18,11 @@ jobs:
       matrix:
         config:
         - {
-            name: "Windows MSVC 2019",
-            os: windows-2019,
+            name: "Windows MSVC 2022",
+            os: windows-2022,
             cc: "cl",
             cxx: "cl",
-            generator: "Visual Studio 16 2019"
+            generator: "Visual Studio 17 2022"
           }
         build_type: [Debug, Release]
 
