--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -18,6 +18,13 @@ jobs:
       matrix:
         config:
         - {
+            name: "Windows MSVC 2019",
+            os: windows-2022,
+            cc: "cl",
+            cxx: "cl",
+            generator: "Visual Studio 16 2019"
+          }
+        - {
             name: "Windows MSVC 2022",
             os: windows-2022,
             cc: "cl",
