--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,7 +19,7 @@ jobs:
         config:
         - {
             name: "Windows MSVC 2019",
-            os: windows-2022,
+            os: windows-2019,
             cc: "cl",
             cxx: "cl",
             generator: "Visual Studio 16 2019"
@@ -41,6 +41,15 @@ jobs:
       run: sudo apt-get update && sudo apt-get install -y ninja-build
 
     - name: Configure CMake
+      if: runner.os == 'Windows'
+      env:
+        CC: ${{ matrix.config.cc }}
+        CXX: ${{ matrix.config.cxx }}
+      run: |
+        cmake -B ${{github.workspace}}/build -G "${{ matrix.config.generator }}" -DCMAKE_BUILD_TYPE=${{matrix.build_type }} -A x64
+
+    - name: Configure CMake
+      if: runner.os != 'Windows'
       env:
         CC: ${{ matrix.config.cc }}
         CXX: ${{ matrix.config.cxx }}
