--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -10,7 +10,8 @@ set( FREEIMAGE_VERSION ${FREEIMAGE_VERSION_MAJOR}.${FREEIMAGE_VERSION_MINOR}.${F
 project( FreeImage VERSION ${FREEIMAGE_VERSION} LANGUAGES C CXX )
 
 if(MSVC)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:__cplusplus")
+    set(CMAKE_C_FLAGS "/DWIN32 /D_WINDOWS")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /DWIN32 /Zc:__cplusplus")
 endif()
 
 add_subdirectory( ZLibFreeImage ) # ZLibFreeImage is a dependency of other libraries, so make sure it's loaded first.
