Do not set c11 for msvc 2019

--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -223,14 +223,16 @@ set_property(TARGET LibWebP PROPERTY CXX_STANDARD 14)
 set_property(TARGET OpenEXR PROPERTY CXX_STANDARD 14)
 set_property(TARGET ZLibFreeImage PROPERTY CXX_STANDARD 14)
 
-set_property(TARGET FreeImage PROPERTY C_STANDARD 11)
-set_property(TARGET FreeImageLib PROPERTY C_STANDARD 11)
-set_property(TARGET LibJPEG PROPERTY C_STANDARD 11)
-set_property(TARGET LibJXR PROPERTY C_STANDARD 11)
-set_property(TARGET LibOpenJPEG PROPERTY C_STANDARD 11)
-set_property(TARGET LibPNG PROPERTY C_STANDARD 11)
-set_property(TARGET LibRaw PROPERTY C_STANDARD 11)
-set_property(TARGET LibTIFF4 PROPERTY C_STANDARD 11)
-set_property(TARGET LibWebP PROPERTY C_STANDARD 11)
-set_property(TARGET OpenEXR PROPERTY C_STANDARD 11)
-set_property(TARGET ZLibFreeImage PROPERTY C_STANDARD 11)
+if (NOT (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC" AND MSVC_VERSION LESS 1930))
+    set_property(TARGET FreeImage PROPERTY C_STANDARD 11)
+    set_property(TARGET FreeImageLib PROPERTY C_STANDARD 11)
+    set_property(TARGET LibJPEG PROPERTY C_STANDARD 11)
+    set_property(TARGET LibJXR PROPERTY C_STANDARD 11)
+    set_property(TARGET LibOpenJPEG PROPERTY C_STANDARD 11)
+    set_property(TARGET LibPNG PROPERTY C_STANDARD 11)
+    set_property(TARGET LibRaw PROPERTY C_STANDARD 11)
+    set_property(TARGET LibTIFF4 PROPERTY C_STANDARD 11)
+    set_property(TARGET LibWebP PROPERTY C_STANDARD 11)
+    set_property(TARGET OpenEXR PROPERTY C_STANDARD 11)
+    set_property(TARGET ZLibFreeImage PROPERTY C_STANDARD 11)
+endif()
