--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -14,7 +14,7 @@ jobs:
     name: ${{ matrix.config.name }} (${{ matrix.build_type }})
     runs-on: ${{ matrix.config.os }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         config:
         - {
@@ -31,6 +31,20 @@ jobs:
             cxx: "cl",
             generator: "Visual Studio 17 2022"
           }
+        - {
+            name: "Ubuntu 20 GCC 9",
+            os: ubuntu-20.04,
+            cc: "gcc",
+            cxx: "g++",
+            generator: "Ninja"
+          }
+        - {
+            name: "Ubuntu 22 GCC 11",
+            os: ubuntu-22.04,
+            cc: "gcc",
+            cxx: "g++",
+            generator: "Ninja"
+          }
         build_type: [Debug, Release]
 
     steps:
@@ -40,7 +54,7 @@ jobs:
       if: runner.os == 'Linux'
       run: sudo apt-get update && sudo apt-get install -y ninja-build
 
-    - name: Configure CMake
+    - name: Configure
       if: runner.os == 'Windows'
       env:
         CC: ${{ matrix.config.cc }}
@@ -48,7 +62,7 @@ jobs:
       run: |
         cmake -B ${{github.workspace}}/build -G "${{ matrix.config.generator }}" -DCMAKE_BUILD_TYPE=${{matrix.build_type }} -A x64
 
-    - name: Configure CMake
+    - name: Configure
       if: runner.os != 'Windows'
       env:
         CC: ${{ matrix.config.cc }}
