--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -256,3 +256,10 @@ if(CMAKE_SYSTEM_PROCESSOR MATCHES "^(arm|Arm|ARM|aarch64|AAarch64|AARCH64)")
         target_compile_definitions(${target} PRIVATE PNG_ARM_NEON_OPT=0)
     endforeach()
 endif()
+
+# Temporary workaround for potential issues with clang, see https://github.com/Homebrew/homebrew-core/blob/b5d2dd8e69b2729015a2855060c1f2dfa303dbdc/Formula/f/freeimage.rb
+if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND CMAKE_CXX_COMPILER_VERSION VERSION_GREATER_EQUAL 15)
+    foreach(target IN LISTS TARGET_LIST)
+        target_compile_options(${target} PRIVATE -Wno-implicit-function-declaration)
+    endforeach()
+endif()
