--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -231,8 +231,10 @@ endif()
 
 # msvc specific compile flags
 if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-    target_compile_definitions(${target} PRIVATE WIN32)
-    target_compile_options(${target} PRIVATE /EHsc /Zc:__cplusplus)
+    foreach(target IN LISTS TARGET_LIST)
+        target_compile_definitions(${target} PRIVATE WIN32)
+        target_compile_options(${target} PRIVATE /EHsc /Zc:__cplusplus)
+    endforeach()
 endif()
 
 # position independent code on linux
