--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -69,12 +69,20 @@ jobs:
             xcode_version: "15.4"
           }
         - {
-            name: "macOS 15 Xcode 16 (ARM)",
+            name: "macOS 15 Xcode 16.2 (ARM)",
             os: macos-15,
             cc: "clang",
             cxx: "clang++",
             generator: "Xcode",
             xcode_version: "16.2"
+          }
+        - {
+            name: "macOS 15 Xcode 16.3 (ARM)",
+            os: macos-15,
+            cc: "clang",
+            cxx: "clang++",
+            generator: "Xcode",
+            xcode_version: "16.3"
           }
         build_type: [Debug, Release]
 
