--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required( VERSION 3.23 )
 set( FREEIMAGE_VERSION_MAJOR 3 )
 set( FREEIMAGE_VERSION_MINOR 19 )
 set( FREEIMAGE_VERSION_PATCH 0 )
-set( FREEIMAGE_VERSION_TWEAK 0 )
+set( FREEIMAGE_VERSION_TWEAK 1 ) # we use a newer libpng (1.6.48) and zlib (1.3.1)
 set( FREEIMAGE_VERSION ${FREEIMAGE_VERSION_MAJOR}.${FREEIMAGE_VERSION_MINOR}.${FREEIMAGE_VERSION_PATCH}.${FREEIMAGE_VERSION_TWEAK} )
 
 project( FreeImage VERSION ${FREEIMAGE_VERSION} LANGUAGES C CXX )
