--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -234,7 +234,7 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
     foreach(target IN LISTS TARGET_LIST)
         target_compile_options(${target} PRIVATE /EHsc /Zc:__cplusplus)
     endforeach()
-
+else()
     # see https://github.com/microsoft/vcpkg/blob/b9f5f9c4fd0088a7e56ae357a4ba39bc3f8be2de/ports/jxrlib/CMakeLists.txt
     target_compile_options(LibJXR PRIVATE 
         -Wno-error=implicit-function-declaration        
